# cra-scope-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  regulatory_update.yml
.github/workflows/: ci.yml  release.yml
src/cra_scope_cli/: __init__.py  main.py
src/cra_scope_core/: __init__.py  csirt.py  kev.py  srp.py  version.py
tests/: test_cli.py  test_csirt.py  test_srp_builders.py  test_validator.py
