[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "cra-scope"
version = "0.1.1"
description = "Open-source CLI for preparing EU Cyber Resilience Act (Regulation 2024/2847) Article 14 notifications for the ENISA Single Reporting Platform (SRP)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "CRA Scope B.V.", email = "hello@crascope.com" },
]
keywords = [
    "cra",
    "cyber-resilience-act",
    "compliance",
    "enisa",
    "srp",
    "article-14",
    "vulnerability-reporting",
    "eu-regulation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://crascope.com"
Documentation = "https://github.com/Usingthefork/cra-scope-cli#readme"
Source = "https://github.com/Usingthefork/cra-scope-cli"
Issues = "https://github.com/Usingthefork/cra-scope-cli/issues"
"Managed SaaS" = "https://crascope.com"

[project.scripts]
cra-scope = "cra_scope_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/cra_scope_core", "src/cra_scope_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "LICENSE",
    "NOTICE",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/cra_scope_core", "src/cra_scope_cli"]
branch = true
